<resources>
    <string name="app_name">Notie</string>
    <string name="button_start">Start</string>

    <string name="title">Title:</string>
    <string name="description">Description:</string>

    <string name="title_hint">Insert title here</string>
    <string name="description_hint">Insert text here</string>

    <string name="title_activity_new_note">New note</string>
    <string name="save_button">Save note</string>
</resources>
